[package]
name = "jetproof"
description = "A tool for creating huge jetton offchain merkle proofs."
repository = "https://github.com/Rexagon/jetproof"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
argh = "0.1"
ahash = "0.8"
base64-simd = "0.8"
crossbeam-channel = "0.5"
everscale-types = { version = "0.1.0-rc.8", default-features = false, features = [
    "sync",
    "models",
    "rayon",
] }
indicatif = "0.17"
rand = "0.8"
rayon = "1.10"
serde_json = { version = "1.0", features = ["preserve_order"] }
tikv-jemallocator = { version = "0.6", features = [
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
] }
