[package]
name = "jetproof"
description = "A tool for creating huge jetton offchain merkle proofs."
version = "0.2.0"
edition = "2021"
rust-version = "1.80.0"
repository = "https://github.com/Rexagon/jetproof"
license = "MIT"

[dependencies]
ahash = "0.8"
anyhow = "1.0"
base64-simd = "0.8"
bytesize = { version = "1", features = ["serde"] }
config = { version = "0.14", default-features = false, features = ["json"] }
crossbeam-channel = "0.5"
clap = { version = "4", features = ["derive"] }
everscale-types = { version = "0.1.0-rc.8", default-features = false, features = [
    "sync",
    "models",
    "rayon",
    "serde",
] }
hex = "0.4"
indicatif = "0.17"
once_cell = "1.19"
rand = "0.8"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
simd-json = "0.13"
tikv-jemallocator = { version = "0.5", features = [
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }

axum = { version = "0.7", optional = true }
rocksdb = { version = "0.22.0", features = [
    "multi-threaded-cf",
    "jemalloc",
], default-features = false, optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
futures-util = { version = "0.3", optional = true }
libc = { version = "0.2", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.5", features = ["cors", "timeout"], optional = true }

[features]
api = [
    "dep:axum",
    "dep:rocksdb",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:futures-util",
    "dep:libc",
    "dep:tower",
    "dep:tower-http",
]

[profile.release]
lto = "thin"
codegen-units = 1
debug = true
panic = "abort"
